i18n/de/docusaurus-plugin-content-docs/version-3.2.1/readme.mdx
---
title: Lies mich
slug: /
---

import DocCard from '@theme/DocCard';

Diese Dokumentation soll erklären, wie RaidProtect funktioniert. Senden Sie uns gerne Ihr Feedback, damit wir sie verbessern können.
Vergiss nicht, unserem [Discord-Server](https://raidprotect.bot/discord) beizutreten, um über die neuesten Neuigkeiten des Projekts informiert zu bleiben. Du kannst dort auch unser Support‑Team erreichen, das deine Fragen zur Verwendung des Bots beantwortet. 😄

## 🚀 Erste Schritte mit RaidProtect {#start}

Um RaidProtect zu verwenden, lade ihn einfach mit folgendem Link auf deinen Server ein.

<DocCard item={{ type: 'link', href: 'https://raidprotect.bot/invite', label: 'RaidProtect einladen' }} />
<br />

:::danger
Warnung, **Kopien des Bots** mit dem Namen RaidProtect sind im Umlauf, lade ihn nur über unsere offizielle Website ein.
:::

### Voraussetzungen {#requirement}

Um das ordnungsgemäße Funktionieren von RaidProtect sicherzustellen:
1. **Erteile RaidProtect die Administrator‑Berechtigung**. Dadurch kann der Bot automatisch alle deine Kanäle moderieren.
2. **Platziere seine Rolle auf derselben Ebene wie deine Server‑Administratoren**. Das Berechtigungssystem erlaubt RaidProtect nicht, Nutzer mit einer höheren Rolle zu sanktionieren.

### Installation {#install}

Sobald RaidProtect zu deinem Server hinzugefügt wurde, führe den Befehl [`/setup`](./setup.md#install) aus.

<DocCard item={{ type: 'link', href: '/docs/setup', docId: 'setup', label: 'Geführte Installation' }} />
<br />

:::note
Für die weniger Abenteuerlustigen (oder die Ungeduldigen) kannst du einfach die Anweisungen des Befehls [`/setup`](./setup.md#recommended) lesen, der die wichtigsten Informationen jeder Funktion zusammenfasst.
:::

### Verwendung {#use}

Sieh dir die verschiedenen Abschnitte dieser Dokumentation an, um alle Funktionen von RaidProtect zu entdecken.

:::info
In der Dokumentation werden Befehlsparameter auf diese Weise angezeigt, wenn sie `(obligatorisch)` und wenn sie `[optional]` sind.
:::

<DocCard item={{ type: 'link', href: '/docs/language', docId: 'language', label: 'Verfügbare Sprachen' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/features', label: 'Funktionen', description: 'Dokumentation für jede unserer Funktionen.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/guides', label: 'Unsere Anleitungen', description: 'Anleitungen, die dir bestmöglich helfen.' }} />
<br />
<DocCard item={{ type: 'category', href: '/docs/useful-links', label: 'Nützliche Links', description: 'Verschiedene nützliche Links zu RaidProtect.' }} />
<br />
